index.html for live link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-
+    <h1>Full stack Practical</h1>
+    <a href="./fullstackpractical.html">Practical link</a>
 </body>
 
 </html>
